# esp-idf-net-logging

./: .gitignore  CMakeLists.txt  Kconfig  README.md  http-server.py  idf_component.yml  multicast-log-receiver.py  tcp-server.py  udp-multicast.py  udp-server.py
basic/: CMakeLists.txt
basic/main/: main.c
components/net-logging/: CMakeLists.txt  Kconfig.projbuild  http_client.c  mqtt_pub.c  net_logging.c  net_logging.h  sse_server.c  tcp_client.c  udp_client.c
esp32s2-mini/: README.md
esp32s2-mini/main/: CMakeLists.txt  main.c
examples/basic/: CMakeLists.txt
examples/basic/main/: Kconfig.projbuild  main.c
examples/uart_async_rxtxtasks/: CMakeLists.txt  README.md  sdkconfig
examples/uart_async_rxtxtasks/main/: Kconfig.projbuild  uart_async_rxtxtasks_main.c
examples/uart_select/: CMakeLists.txt  README.md
examples/uart_select/main/: Kconfig.projbuild  uart_select_example_main.c
include/: net_logging.h
main/: Kconfig.projbuild  main.c
src/: http_client.c  mqtt_pub.c  multicast_log_sender.c  net_logging.c  net_logging_priv.h  sse_server.c  tcp_client.c  udp_client.c
src/assets/: sse.html
uart_async_rxtxtasks/: CMakeLists.txt  README.md
uart_async_rxtxtasks/main/: uart_async_rxtxtasks_main.c
uart_select/: CMakeLists.txt  README.md
uart_select/main/: uart_select_example_main.c
